plugins {
	id 'java'
	id 'org.springframework.boot' version '4.1.1'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'org.letspeppol'
version = '0.0.1-SNAPSHOT'
description = 'Proxy to Peppol'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    implementation 'org.springframework.boot:spring-boot-starter-flyway'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-security-oauth2-resource-server'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-api:3.1.0'
    implementation 'io.micrometer:micrometer-registry-prometheus'
    implementation 'org.flywaydb:flyway-database-postgresql'
    implementation 'com.github.loki4j:loki-logback-appender:2.0.1'

    implementation 'com.helger.phive:phive-api:11.0.1'
    implementation 'com.helger.phive:phive-result:11.0.1'
    implementation 'com.helger.phive:phive-ves-engine:11.0.1'
    implementation 'com.helger.phive:phive-xml:11.0.1'
    implementation 'com.helger.phive.rules:phive-rules-peppol:4.0.3'
    implementation 'com.helger.phive.rules:phive-rules-en16931:4.0.3'
    implementation 'com.helger.phive.rules:phive-rules-ubl:4.0.3'
    implementation 'com.helger:ddd:0.7.1'

	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.named('bootJar') {
    archiveFileName = 'proxy.jar'
}
